also fix key-value alignment in Certificate details modal

--- a/frontend/pages/hosts/details/modals/CertificateDetailsModal/_styles.scss
+++ b/frontend/pages/hosts/details/modals/CertificateDetailsModal/_styles.scss
@@ -10,6 +10,10 @@
     font-size: $small;
   }
 
+  .component__tooltip-wrapper__element {
+    line-height: inherit;
+  }
+
   &__section {
     display: flex;
     gap: $pad-small;
